objects/ZdProfile__c.object
<CustomObject>
    <description>Represents Zendesk customer profile.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zendesk Profiles</relationshipLabel>
        <relationshipName>ZdProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ZdPVHUserId__c</fullName>
        <externalId>true</externalId>
        <label>ZdPVHUserId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZdTnCUserId__c</fullName>
        <externalId>true</externalId>
        <label>ZdTnCUserId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZdProfile</label>
    <nameField>
        <displayFormat>ZDF-{0000000000}</displayFormat>
        <label>Zd Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZdProfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>